--- a/WinFormApp/Zhou.Core/Zhou.Core.csproj
+++ b/WinFormApp/Zhou.Core/Zhou.Core.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppService.cs" />
+    <Compile Include="AppSetting\Helper.cs" />
+    <Compile Include="IocBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
