--- a/WinFormApp/Zhou.IService/Zhou.IService.csproj
+++ b/WinFormApp/Zhou.IService/Zhou.IService.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.4.4.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\packages\Castle.Windsor.5.1.1\lib\net45\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,7 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBaseService.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Zhou.Core\Zhou.Core.csproj">
+      <Project>{c8e1951c-98a8-4d62-bb2c-d41d8f90253f}</Project>
+      <Name>Zhou.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zhou.Models\Zhou.Models.csproj">
+      <Project>{802e5eca-229f-45a4-9e66-93ae29e61ec1}</Project>
+      <Name>Zhou.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
