#初步完成平台搭建

--- a/WinFormApp/WinForms/App.config
+++ b/WinFormApp/WinForms/App.config
@@ -3,6 +3,11 @@
   <appSettings>
     <add key="IocAssemblyName" value=""/>
   </appSettings>
+  <connectionStrings>
+    <add name="default"
+      connectionString = "Data Source=10.1.68.72;Initial Catalog=LensModuleSFC;Persist Security Info=True;User ID=sa;Password=123456a!;"
+      providerName     = "SqlServer" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
