--- a/WinFormApp/Zhou.Service/Zhou.Service.csproj
+++ b/WinFormApp/Zhou.Service/Zhou.Service.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="linq2db, Version=3.4.2.0, Culture=neutral, PublicKeyToken=e41013125f9e410a, processorArchitecture=MSIL">
-      <HintPath>..\packages\linq2db.3.4.2\lib\net46\linq2db.dll</HintPath>
+    <Reference Include="linq2db">
+      <HintPath>..\Zhou.DLL\linq2db.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,12 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zhou.Core\Zhou.Core.csproj">
@@ -59,6 +55,10 @@
     <ProjectReference Include="..\Zhou.IService\Zhou.IService.csproj">
       <Project>{c28d6d2d-de48-4e1d-90d1-1d59d4eb3d7c}</Project>
       <Name>Zhou.IService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zhou.Models\Zhou.Models.csproj">
+      <Project>{802E5ECA-229F-45A4-9E66-93AE29E61EC1}</Project>
+      <Name>Zhou.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
