--- a/WinFormApp/App.Core/App.Core.csproj
+++ b/WinFormApp/App.Core/App.Core.csproj
@@ -53,17 +53,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppService.cs" />
+    <Compile Include="AppContext.cs" />
+    <Compile Include="Caching\CacheItem.cs" />
+    <Compile Include="Export.cs" />
+    <Compile Include="TestClass.cs" />
+    <Compile Include="UseAge\ICache.cs" />
+    <Compile Include="Caching\MemoryCache.cs" />
+    <Compile Include="Extends\ReflectionExtensions.cs" />
+    <Compile Include="Extends\StringExtensions.cs" />
+    <Compile Include="Extends\WindsorContainerExtensions.cs" />
+    <Compile Include="Init\IInitIoc.cs" />
+    <Compile Include="Init\InitIoc.cs" />
+    <Compile Include="Runtime\IUserIdentity.cs" />
+    <Compile Include="Runtime\ILoginedInfo.cs" />
+    <Compile Include="Runtime\UserType.cs" />
+    <Compile Include="Service\AppService.cs" />
     <Compile Include="AppSetting\Helper.cs" />
     <Compile Include="Attributes\NoTrans.cs" />
     <Compile Include="Attributes\StartTrans.cs" />
-    <Compile Include="BaseService.cs" />
-    <Compile Include="IBase.cs" />
+    <Compile Include="UseAge\IServiceBase.cs" />
     <Compile Include="Ioc\BasicRegistrar.cs" />
     <Compile Include="Ioc\DataBaseInterceptor.cs" />
     <Compile Include="Ioc\InstanceLifeStyle.cs" />
     <Compile Include="Ioc\IocBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Monitor.cs" />
+    <Compile Include="Tools\SimpleCipherHelper.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
