--- a/WinFormApp/App.Core/App.Core.csproj
+++ b/WinFormApp/App.Core/App.Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Caching\CacheItem.cs" />
     <Compile Include="Export.cs" />
     <Compile Include="TestClass.cs" />
+    <Compile Include="Tools\TypeScanner.cs" />
     <Compile Include="UseAge\ICache.cs" />
     <Compile Include="Caching\MemoryCache.cs" />
     <Compile Include="Extends\ReflectionExtensions.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Monitor.cs" />
     <Compile Include="Tools\SimpleCipherHelper.cs" />
+    <Compile Include="UseAge\ITypeScanner.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
