今天定义了几个接口，忙工作了，还没实现

--- a/WinFormApp/App.Core/App.Core.csproj
+++ b/WinFormApp/App.Core/App.Core.csproj
@@ -72,6 +72,8 @@
     <Compile Include="AppSetting\Helper.cs" />
     <Compile Include="Attributes\NoTrans.cs" />
     <Compile Include="Attributes\StartTrans.cs" />
+    <Compile Include="UseAge\ILog.cs" />
+    <Compile Include="UseAge\IObjectMapper.cs" />
     <Compile Include="UseAge\IServiceBase.cs" />
     <Compile Include="Ioc\BasicRegistrar.cs" />
     <Compile Include="Ioc\DataBaseInterceptor.cs" />
